/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.tools.validate;

import "spine/options.proto";
import "spine/time_options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.tools.validate";
option java_outer_classname = "WhenRepeatedProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "spine/time/time.proto";

// Tests how the option works with `PAST` restriction upon repeated Protobuf timestamp.
message AlreadyHappenedProtoEvents {
    repeated google.protobuf.Timestamp when_happened = 1 [(when).in = PAST];
}

// Tests how the option works with `PAST` restriction upon repeated Spine time.
message AlreadyHappenedSpineEvents {
    repeated spine.time.LocalDateTime when_happened = 1 [(when).in = PAST];
}

// Tests how the option works with `FUTURE` restriction upon repeated Protobuf timestamp.
message NotYetHappenedProtoEvents {
    repeated google.protobuf.Timestamp when_will_happen = 1 [(when).in = FUTURE];
}

// Tests how the option works with `FUTURE` restriction upon repeated Spine time.
message NotYetHappenedSpineEvents {
    repeated spine.time.LocalDateTime when_will_happen = 1 [(when).in = FUTURE];
}

// Makes sure that a repeated Protobuf timestamp field is not affected when there's no option.
message NonTimedProtoEvents {
    repeated google.protobuf.Timestamp at = 1;
}

// Makes sure that a repeated Spine time field is not affected when there's no option.
message NonTimedSpineEvents {
    repeated spine.time.LocalDateTime at = 1;
}
